--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js'></script>
     <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <link rel="shortcut icon" href="images/favicon.png" />
+<!--   <script>
+  if(localStorage.getItem("loginStatus") !== "1") {
+                   window.location.assign("login");
+               };
+             </script> -->
 </head>
 
 <style>
@@ -45,7 +50,7 @@
 <body ng-app="hbcadminApp" ng-cloak>
   <div class="container-scroller">
     <!-- partial:partials/_navbar.html -->
-    <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+    <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row" ng-if="islogin == true">
       <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
         <a class="navbar-brand brand-logo" href="index.html">
           <img src="images/hbc-logo.png" alt="logo" />
@@ -223,7 +228,7 @@
     <!-- partial -->
     <div class="container-fluid page-body-wrapper">
       <!-- partial:partials/_sidebar.html -->
-      <nav class="sidebar sidebar-offcanvas" id="sidebar">
+      <nav class="sidebar sidebar-offcanvas" id="sidebar" ng-if="islogin == true">
         <ul class="nav">
           <li class="nav-item nav-profile">
             <div class="nav-link">
