--- a/pages/deal/edit-deal.html
+++ b/pages/deal/edit-deal.html
@@ -16,7 +16,7 @@ input[type="date"], input[type="time"], input[type="datetime-local"], input[type
 }
 </style>
 
-<div class="create"><h3>Create Deal</h3></div>
+<div class="create"><h3>Update Deal</h3></div>
 <div class="card col-md-12 card-box" style="margin-top:0px;">
   <div class="card-body">
     <form name="packageForm" ng-submit="updateDeal()">
