--- a/pages/package/edit-package.html
+++ b/pages/package/edit-package.html
@@ -1,4 +1,4 @@
-<div class="create"><h3>Create Package</h3></div>
+<div class="create"><h3>Update Package</h3></div>
 <div class="card col-md-12 card-box" style="margin-top:0px;">
   <div class="card-body">
     <form name="packageForm" ng-submit="updatePackage()">
