--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     width: 40px;
     margin-right: 125px;
 }
+.ta-hidden-input{
+  display: none;
+}
 </style>
 
 <body ng-app="hbcadminApp" ng-cloak>
