--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row" ng-if="islogin == true">
       <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
-        <a class="navbar-brand brand-logo" href="index.html">
+        <a class="navbar-brand brand-logo" href="home">
           <img src="images/hbc-logo.png" alt="logo" />
         </a>
         <!-- <a class="navbar-brand brand-logo-mini" href="index.html">
