--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <base href="/hbcadmin/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>HBC ADMIN</title>
+  <title>SAHYOG ADMIN</title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="vendors/iconfonts/mdi/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
